log
Thu 21 Mar 2024 12:40:38 AM UTC: 
 tests:  0|5
total_score: 0/70
2cf1cc2
Thu 21 Mar 2024 12:47:04 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
8d4e507
Thu 21 Mar 2024 12:47:56 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9cef5bb
Thu 21 Mar 2024 12:51:06 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:31: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   48 |      L = (List*)malloc(sizeof(List));
      |                               ^~~~
exercises.c:50:17: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |      pushBack(L,dato);
      |                 ^~~~
      |                 |
      |                 int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
9b19454
Thu 21 Mar 2024 12:54:27 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
0c95647
Thu 21 Mar 2024 01:01:40 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
330c6bb
Thu 21 Mar 2024 01:25:26 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ab66baf
Thu 21 Mar 2024 01:30:51 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cebd0d1
Thu 21 Mar 2024 02:42:55 AM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
75ac3ad
Thu 21 Mar 2024 02:46:08 AM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|0
e3b5e15
Thu 21 Mar 2024 02:47:55 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
aeec64d
Thu 21 Mar 2024 02:48:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6532971
Thu 21 Mar 2024 02:48:54 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:101:17: error: comparison between pointer and integer [-Werror]
  101 |   while(top(P1) != -1){
      |                 ^~
exercises.c:107:22: error: comparison between pointer and integer [-Werror]
  107 |   while(top(pilaAux) != -1){
      |                      ^~
cc1: all warnings being treated as errors
Compilation failed
6404b2b
Thu 21 Mar 2024 02:49:31 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
59dce21
Thu 21 Mar 2024 02:56:34 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
b003fcb
Thu 21 Mar 2024 02:05:26 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
065fb50
Thu 21 Mar 2024 02:08:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
9c171e4
Thu 21 Mar 2024 02:11:23 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|1
total_score: 50/70
f9bdb29
Thu 21 Mar 2024 02:11:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
267e9db
Thu 21 Mar 2024 02:12:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
267e9db
